--- a/style.css
+++ b/style.css
@@ -6,6 +6,31 @@
 	box-sizing: border-box;
 }
 
+/* https://gist.github.com/MoOx/9137295 */
+button {
+	border: none;
+	margin: 0;
+	padding: 0;
+	width: auto;
+	overflow: visible;
+
+	background: transparent;
+
+	/* inherit font & color from ancestor */
+	color: inherit;
+	font: inherit;
+
+	/* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
+	line-height: normal;
+
+	/* Corrects font smoothing for webkit */
+	-webkit-font-smoothing: inherit;
+	-moz-osx-font-smoothing: inherit;
+
+	/* Corrects inability to style clickable `input` types in iOS */
+	-webkit-appearance: none;
+}
+
 /** GLOBALS: VARs, IMPORTs *********/
 
 :root {
@@ -82,6 +107,8 @@ h1 {
 	width: 100%;
 	height: 100%;
 
+	padding: 0;
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -92,23 +119,43 @@ h1 {
 	background-color: var(--amber-300);
 
 	font-family: "Gloria Hallelujah", cursive;
-	font-size: 4em;
+	font-size: 5em;
+	overflow: hidden;
 	font-weight: 800;
 	color: var(--amber-800);
 
 	cursor: pointer;
 }
 
-.cell:hover {
+.cell:hover,
+.restart-btn:hover {
 	background: var(--amber-200);
 }
 
 .status {
-	margin: 1em;
+	margin: 0.25em;
 
 	font-size: 1.75rem;
 	font-family: "Inter", sans-serif;
 	font-weight: 600;
 
 	color: var(--amber-800);
+}
+
+.buttons {
+	margin: 2em;
+}
+
+.restart-btn {
+	border: 3px solid var(--amber-600);
+	border-radius: 0.1em;
+
+	padding: 0.25rem 1rem;
+
+	background-color: var(--amber-300);
+	color: var(--amber-950);
+
+	font-size: 2rem;
+
+	cursor: pointer;
 }
